# add-line-numbers

./: .gitignore  CHANGELOG.md  CHANGELOG_ja.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  README.md  README_ja.md  SECURITY.md  SECURITY_ja.md  add_line_numbers.py  pyproject.toml  spec.md
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
OLD/: README.md
docs/: 20260419-pypi-publication-plan.md
docs/assets/: example.key
docs/examples/: README.md  add_line_numbers.py
